Update Pandas Notebook - 4 Grouping.ipynb

--- a/Notebooks/pandas tutorial/Pandas Notebook - 4 Grouping.ipynb
+++ b/Notebooks/pandas tutorial/Pandas Notebook - 4 Grouping.ipynb
@@ -633,6 +633,286 @@
                 }
             ],
             "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "### For more information:\r\n",
+                "https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.groupby.html"
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "***\r\n",
+                "# Concatenating\r\n",
+                "### We have two seperate dataframes:"
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 24,
+            "source": [
+                "turkey_weather = pd.DataFrame({\r\n",
+                "    \"city\": [\"ankara\", \"istanbul\",\"izmir\"],\r\n",
+                "    \"temperature\" : [32, 45, 30],\r\n",
+                "    \"humidty\" : [15, 55, 65]\r\n",
+                "})\r\n",
+                "turkey_weather"
+            ],
+            "outputs": [
+                {
+                    "output_type": "execute_result",
+                    "data": {
+                        "text/plain": [
+                            "       city  temperature  humidty\n",
+                            "0    ankara           32       15\n",
+                            "1  istanbul           45       55\n",
+                            "2     izmir           30       65"
+                        ],
+                        "text/html": [
+                            "<div>\n",
+                            "<style scoped>\n",
+                            "    .dataframe tbody tr th:only-of-type {\n",
+                            "        vertical-align: middle;\n",
+                            "    }\n",
+                            "\n",
+                            "    .dataframe tbody tr th {\n",
+                            "        vertical-align: top;\n",
+                            "    }\n",
+                            "\n",
+                            "    .dataframe thead th {\n",
+                            "        text-align: right;\n",
+                            "    }\n",
+                            "</style>\n",
+                            "<table border=\"1\" class=\"dataframe\">\n",
+                            "  <thead>\n",
+                            "    <tr style=\"text-align: right;\">\n",
+                            "      <th></th>\n",
+                            "      <th>city</th>\n",
+                            "      <th>temperature</th>\n",
+                            "      <th>humidty</th>\n",
+                            "    </tr>\n",
+                            "  </thead>\n",
+                            "  <tbody>\n",
+                            "    <tr>\n",
+                            "      <th>0</th>\n",
+                            "      <td>ankara</td>\n",
+                            "      <td>32</td>\n",
+                            "      <td>15</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>1</th>\n",
+                            "      <td>istanbul</td>\n",
+                            "      <td>45</td>\n",
+                            "      <td>55</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>2</th>\n",
+                            "      <td>izmir</td>\n",
+                            "      <td>30</td>\n",
+                            "      <td>65</td>\n",
+                            "    </tr>\n",
+                            "  </tbody>\n",
+                            "</table>\n",
+                            "</div>"
+                        ]
+                    },
+                    "metadata": {},
+                    "execution_count": 24
+                }
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 25,
+            "source": [
+                "usa_weather = pd.DataFrame({\r\n",
+                "    \"city\": [\"New York\", \"Florida\",\"Washington\"],\r\n",
+                "    \"temperature\" : [25, 50, 30],\r\n",
+                "    \"humidty\" : [25, 65, 15]\r\n",
+                "})\r\n",
+                "usa_weather"
+            ],
+            "outputs": [
+                {
+                    "output_type": "execute_result",
+                    "data": {
+                        "text/plain": [
+                            "         city  temperature  humidty\n",
+                            "0    New York           25       25\n",
+                            "1     Florida           50       65\n",
+                            "2  Washington           30       15"
+                        ],
+                        "text/html": [
+                            "<div>\n",
+                            "<style scoped>\n",
+                            "    .dataframe tbody tr th:only-of-type {\n",
+                            "        vertical-align: middle;\n",
+                            "    }\n",
+                            "\n",
+                            "    .dataframe tbody tr th {\n",
+                            "        vertical-align: top;\n",
+                            "    }\n",
+                            "\n",
+                            "    .dataframe thead th {\n",
+                            "        text-align: right;\n",
+                            "    }\n",
+                            "</style>\n",
+                            "<table border=\"1\" class=\"dataframe\">\n",
+                            "  <thead>\n",
+                            "    <tr style=\"text-align: right;\">\n",
+                            "      <th></th>\n",
+                            "      <th>city</th>\n",
+                            "      <th>temperature</th>\n",
+                            "      <th>humidty</th>\n",
+                            "    </tr>\n",
+                            "  </thead>\n",
+                            "  <tbody>\n",
+                            "    <tr>\n",
+                            "      <th>0</th>\n",
+                            "      <td>New York</td>\n",
+                            "      <td>25</td>\n",
+                            "      <td>25</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>1</th>\n",
+                            "      <td>Florida</td>\n",
+                            "      <td>50</td>\n",
+                            "      <td>65</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>2</th>\n",
+                            "      <td>Washington</td>\n",
+                            "      <td>30</td>\n",
+                            "      <td>15</td>\n",
+                            "    </tr>\n",
+                            "  </tbody>\n",
+                            "</table>\n",
+                            "</div>"
+                        ]
+                    },
+                    "metadata": {},
+                    "execution_count": 25
+                }
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "Pandas provide `pd.concate` function that joints the seperated dataframes:"
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 29,
+            "source": [
+                "dataframe = pd.concat([turkey_weather,usa_weather], ignore_index = True)\r\n",
+                "dataframe"
+            ],
+            "outputs": [
+                {
+                    "output_type": "execute_result",
+                    "data": {
+                        "text/plain": [
+                            "         city  temperature  humidty\n",
+                            "0      ankara           32       15\n",
+                            "1    istanbul           45       55\n",
+                            "2       izmir           30       65\n",
+                            "3    New York           25       25\n",
+                            "4     Florida           50       65\n",
+                            "5  Washington           30       15"
+                        ],
+                        "text/html": [
+                            "<div>\n",
+                            "<style scoped>\n",
+                            "    .dataframe tbody tr th:only-of-type {\n",
+                            "        vertical-align: middle;\n",
+                            "    }\n",
+                            "\n",
+                            "    .dataframe tbody tr th {\n",
+                            "        vertical-align: top;\n",
+                            "    }\n",
+                            "\n",
+                            "    .dataframe thead th {\n",
+                            "        text-align: right;\n",
+                            "    }\n",
+                            "</style>\n",
+                            "<table border=\"1\" class=\"dataframe\">\n",
+                            "  <thead>\n",
+                            "    <tr style=\"text-align: right;\">\n",
+                            "      <th></th>\n",
+                            "      <th>city</th>\n",
+                            "      <th>temperature</th>\n",
+                            "      <th>humidty</th>\n",
+                            "    </tr>\n",
+                            "  </thead>\n",
+                            "  <tbody>\n",
+                            "    <tr>\n",
+                            "      <th>0</th>\n",
+                            "      <td>ankara</td>\n",
+                            "      <td>32</td>\n",
+                            "      <td>15</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>1</th>\n",
+                            "      <td>istanbul</td>\n",
+                            "      <td>45</td>\n",
+                            "      <td>55</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>2</th>\n",
+                            "      <td>izmir</td>\n",
+                            "      <td>30</td>\n",
+                            "      <td>65</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>3</th>\n",
+                            "      <td>New York</td>\n",
+                            "      <td>25</td>\n",
+                            "      <td>25</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>4</th>\n",
+                            "      <td>Florida</td>\n",
+                            "      <td>50</td>\n",
+                            "      <td>65</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>5</th>\n",
+                            "      <td>Washington</td>\n",
+                            "      <td>30</td>\n",
+                            "      <td>15</td>\n",
+                            "    </tr>\n",
+                            "  </tbody>\n",
+                            "</table>\n",
+                            "</div>"
+                        ]
+                    },
+                    "metadata": {},
+                    "execution_count": 29
+                }
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "For more information: https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.concat.html"
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "source": [],
+            "outputs": [],
+            "metadata": {}
         }
     ],
     "metadata": {
