Update Pandas Notebook - 4 Grouping.ipynb

--- a/Notebooks/pandas tutorial/Pandas Notebook - 4 Grouping.ipynb
+++ b/Notebooks/pandas tutorial/Pandas Notebook - 4 Grouping.ipynb
@@ -1407,6 +1407,376 @@
                 }
             ],
             "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "### we can also joint dataframes with series() function"
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 72,
+            "source": [
+                "s = pd.Series([\"Rain\", \"Dry\", \"Humid\"], name = \"event\", index = [2, 1, 0])\r\n",
+                "s"
+            ],
+            "outputs": [
+                {
+                    "output_type": "execute_result",
+                    "data": {
+                        "text/plain": [
+                            "2     Rain\n",
+                            "1      Dry\n",
+                            "0    Humid\n",
+                            "Name: event, dtype: object"
+                        ]
+                    },
+                    "metadata": {},
+                    "execution_count": 72
+                }
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 73,
+            "source": [
+                "pd.concat([temperature_df,s], axis = 1)"
+            ],
+            "outputs": [
+                {
+                    "output_type": "execute_result",
+                    "data": {
+                        "text/plain": [
+                            "         city  temperature  event\n",
+                            "0    New York           25  Humid\n",
+                            "1     Florida           50    Dry\n",
+                            "2  Washington           30   Rain"
+                        ],
+                        "text/html": [
+                            "<div>\n",
+                            "<style scoped>\n",
+                            "    .dataframe tbody tr th:only-of-type {\n",
+                            "        vertical-align: middle;\n",
+                            "    }\n",
+                            "\n",
+                            "    .dataframe tbody tr th {\n",
+                            "        vertical-align: top;\n",
+                            "    }\n",
+                            "\n",
+                            "    .dataframe thead th {\n",
+                            "        text-align: right;\n",
+                            "    }\n",
+                            "</style>\n",
+                            "<table border=\"1\" class=\"dataframe\">\n",
+                            "  <thead>\n",
+                            "    <tr style=\"text-align: right;\">\n",
+                            "      <th></th>\n",
+                            "      <th>city</th>\n",
+                            "      <th>temperature</th>\n",
+                            "      <th>event</th>\n",
+                            "    </tr>\n",
+                            "  </thead>\n",
+                            "  <tbody>\n",
+                            "    <tr>\n",
+                            "      <th>0</th>\n",
+                            "      <td>New York</td>\n",
+                            "      <td>25</td>\n",
+                            "      <td>Humid</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>1</th>\n",
+                            "      <td>Florida</td>\n",
+                            "      <td>50</td>\n",
+                            "      <td>Dry</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>2</th>\n",
+                            "      <td>Washington</td>\n",
+                            "      <td>30</td>\n",
+                            "      <td>Rain</td>\n",
+                            "    </tr>\n",
+                            "  </tbody>\n",
+                            "</table>\n",
+                            "</div>"
+                        ]
+                    },
+                    "metadata": {},
+                    "execution_count": 73
+                }
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "***\r\n",
+                "# A Better Way to Joint Dataframes: `merge()`"
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 84,
+            "source": [
+                "temperature_df = pd.DataFrame({\r\n",
+                "    \"city\": [\"New York\", \"Florida\",\"Washington\", \"Chicago\", \"Mexico\"],\r\n",
+                "    \"temperature\" : [25, 50, 30, 12, 4]\r\n",
+                "}, index = [0, 1, 2, 3, 4])\r\n",
+                "temperature_df"
+            ],
+            "outputs": [
+                {
+                    "output_type": "execute_result",
+                    "data": {
+                        "text/plain": [
+                            "         city  temperature\n",
+                            "0    New York           25\n",
+                            "1     Florida           50\n",
+                            "2  Washington           30\n",
+                            "3     Chicago           12\n",
+                            "4      Mexico            4"
+                        ],
+                        "text/html": [
+                            "<div>\n",
+                            "<style scoped>\n",
+                            "    .dataframe tbody tr th:only-of-type {\n",
+                            "        vertical-align: middle;\n",
+                            "    }\n",
+                            "\n",
+                            "    .dataframe tbody tr th {\n",
+                            "        vertical-align: top;\n",
+                            "    }\n",
+                            "\n",
+                            "    .dataframe thead th {\n",
+                            "        text-align: right;\n",
+                            "    }\n",
+                            "</style>\n",
+                            "<table border=\"1\" class=\"dataframe\">\n",
+                            "  <thead>\n",
+                            "    <tr style=\"text-align: right;\">\n",
+                            "      <th></th>\n",
+                            "      <th>city</th>\n",
+                            "      <th>temperature</th>\n",
+                            "    </tr>\n",
+                            "  </thead>\n",
+                            "  <tbody>\n",
+                            "    <tr>\n",
+                            "      <th>0</th>\n",
+                            "      <td>New York</td>\n",
+                            "      <td>25</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>1</th>\n",
+                            "      <td>Florida</td>\n",
+                            "      <td>50</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>2</th>\n",
+                            "      <td>Washington</td>\n",
+                            "      <td>30</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>3</th>\n",
+                            "      <td>Chicago</td>\n",
+                            "      <td>12</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>4</th>\n",
+                            "      <td>Mexico</td>\n",
+                            "      <td>4</td>\n",
+                            "    </tr>\n",
+                            "  </tbody>\n",
+                            "</table>\n",
+                            "</div>"
+                        ]
+                    },
+                    "metadata": {},
+                    "execution_count": 84
+                }
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 85,
+            "source": [
+                "humidity_df = pd.DataFrame({\r\n",
+                "    \"city\": [\"Florida\", \"Washington\",\"New York\"],\r\n",
+                "    \"humidty\" : [65, 15, 25]\r\n",
+                "}, index = [1, 2, 0])\r\n",
+                "humidity_df"
+            ],
+            "outputs": [
+                {
+                    "output_type": "execute_result",
+                    "data": {
+                        "text/plain": [
+                            "         city  humidty\n",
+                            "1     Florida       65\n",
+                            "2  Washington       15\n",
+                            "0    New York       25"
+                        ],
+                        "text/html": [
+                            "<div>\n",
+                            "<style scoped>\n",
+                            "    .dataframe tbody tr th:only-of-type {\n",
+                            "        vertical-align: middle;\n",
+                            "    }\n",
+                            "\n",
+                            "    .dataframe tbody tr th {\n",
+                            "        vertical-align: top;\n",
+                            "    }\n",
+                            "\n",
+                            "    .dataframe thead th {\n",
+                            "        text-align: right;\n",
+                            "    }\n",
+                            "</style>\n",
+                            "<table border=\"1\" class=\"dataframe\">\n",
+                            "  <thead>\n",
+                            "    <tr style=\"text-align: right;\">\n",
+                            "      <th></th>\n",
+                            "      <th>city</th>\n",
+                            "      <th>humidty</th>\n",
+                            "    </tr>\n",
+                            "  </thead>\n",
+                            "  <tbody>\n",
+                            "    <tr>\n",
+                            "      <th>1</th>\n",
+                            "      <td>Florida</td>\n",
+                            "      <td>65</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>2</th>\n",
+                            "      <td>Washington</td>\n",
+                            "      <td>15</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>0</th>\n",
+                            "      <td>New York</td>\n",
+                            "      <td>25</td>\n",
+                            "    </tr>\n",
+                            "  </tbody>\n",
+                            "</table>\n",
+                            "</div>"
+                        ]
+                    },
+                    "metadata": {},
+                    "execution_count": 85
+                }
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 87,
+            "source": [
+                "mergedDF = pd.merge(temperature_df, humidity_df, on = \"city\", how = \"outer\", indicator = True)\r\n",
+                "mergedDF"
+            ],
+            "outputs": [
+                {
+                    "output_type": "execute_result",
+                    "data": {
+                        "text/plain": [
+                            "         city  temperature  humidty     _merge\n",
+                            "0    New York           25     25.0       both\n",
+                            "1     Florida           50     65.0       both\n",
+                            "2  Washington           30     15.0       both\n",
+                            "3     Chicago           12      NaN  left_only\n",
+                            "4      Mexico            4      NaN  left_only"
+                        ],
+                        "text/html": [
+                            "<div>\n",
+                            "<style scoped>\n",
+                            "    .dataframe tbody tr th:only-of-type {\n",
+                            "        vertical-align: middle;\n",
+                            "    }\n",
+                            "\n",
+                            "    .dataframe tbody tr th {\n",
+                            "        vertical-align: top;\n",
+                            "    }\n",
+                            "\n",
+                            "    .dataframe thead th {\n",
+                            "        text-align: right;\n",
+                            "    }\n",
+                            "</style>\n",
+                            "<table border=\"1\" class=\"dataframe\">\n",
+                            "  <thead>\n",
+                            "    <tr style=\"text-align: right;\">\n",
+                            "      <th></th>\n",
+                            "      <th>city</th>\n",
+                            "      <th>temperature</th>\n",
+                            "      <th>humidty</th>\n",
+                            "      <th>_merge</th>\n",
+                            "    </tr>\n",
+                            "  </thead>\n",
+                            "  <tbody>\n",
+                            "    <tr>\n",
+                            "      <th>0</th>\n",
+                            "      <td>New York</td>\n",
+                            "      <td>25</td>\n",
+                            "      <td>25.0</td>\n",
+                            "      <td>both</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>1</th>\n",
+                            "      <td>Florida</td>\n",
+                            "      <td>50</td>\n",
+                            "      <td>65.0</td>\n",
+                            "      <td>both</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>2</th>\n",
+                            "      <td>Washington</td>\n",
+                            "      <td>30</td>\n",
+                            "      <td>15.0</td>\n",
+                            "      <td>both</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>3</th>\n",
+                            "      <td>Chicago</td>\n",
+                            "      <td>12</td>\n",
+                            "      <td>NaN</td>\n",
+                            "      <td>left_only</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>4</th>\n",
+                            "      <td>Mexico</td>\n",
+                            "      <td>4</td>\n",
+                            "      <td>NaN</td>\n",
+                            "      <td>left_only</td>\n",
+                            "    </tr>\n",
+                            "  </tbody>\n",
+                            "</table>\n",
+                            "</div>"
+                        ]
+                    },
+                    "metadata": {},
+                    "execution_count": 87
+                }
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "### If the members are not in the same number, function will take the common elements in dataframes.\r\n",
+                "We can add the 'how' argument to the merge function. This argument will deduce how the joint will be made.\r\n",
+                "<br>if we say \"outer\" all of the elements will be included. \"Inner\" is default so it will only take the ones in the intersection.\r\n",
+                "<br>\"left\" will take the intersection and left ones.\r\n",
+                "<br>For more information: https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.merge.html"
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "Indicator will show which elements origins from."
+            ],
+            "metadata": {}
         }
     ],
     "metadata": {
