Update Pandas Notebook - 4 Grouping.ipynb

--- a/Notebooks/pandas tutorial/Pandas Notebook - 4 Grouping.ipynb
+++ b/Notebooks/pandas tutorial/Pandas Notebook - 4 Grouping.ipynb
@@ -1774,7 +1774,10 @@
         {
             "cell_type": "markdown",
             "source": [
-                "Indicator will show which elements origins from."
+                "* Indicator will show which elements origins from.\r\n",
+                "* If the dataframes have the columns which has the same name, the suffixes argument will seperate them.\r\n",
+                "<br>\r\n",
+                "<br>By default they are names as x's and y's but we can name them. `suffixes = (\"...\", \"...\")`"
             ],
             "metadata": {}
         }
