--- a/Notebooks/pandas tutorial/Pandas Notebook - 1 Basics.ipynb
+++ b/Notebooks/pandas tutorial/Pandas Notebook - 1 Basics.ipynb
@@ -12,7 +12,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 47,
+            "execution_count": 3,
             "source": [
                 "import pandas as pd"
             ],
@@ -32,9 +32,9 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 48,
+            "execution_count": 4,
             "source": [
-                "df = pd.read_csv(\"C:/Users/mhyms/Documents/Files/Python/Dataframes/Doomsday survial rate.csv\")"
+                "df = pd.read_csv(\"C:/Users/mhyms/Documents/Files/Python/Dataframes/Doomsday survial rate.csv\", sep = None, engine = \"python\")"
             ],
             "outputs": [],
             "metadata": {}
@@ -49,7 +49,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 49,
+            "execution_count": 5,
             "source": [
                 "df"
             ],
@@ -58,13 +58,13 @@
                     "output_type": "execute_result",
                     "data": {
                         "text/plain": [
-                            "  Name;Date;Survival Rate;Number of People;Temperature;Bitcoin\n",
-                            "0               Ankara;1.01.2021;0.5;150000;15;45000          \n",
-                            "1               London;1.02.2021;0.4;250000;25;85000          \n",
-                            "2           New York;1.03.2021;0.3;15000000;30;90000          \n",
-                            "3               Paris;1.04.2021;0.2;5400000;10;20000          \n",
-                            "4              Tokyo;1.05.2021;0.1;99000000;55;60000          \n",
-                            "5              Moscow;1.06.2021;0.0;34000;-20;150000          "
+                            "      ﻿Name       Date  Survival Rate  Number of People  Temperature  Bitcoin\n",
+                            "0    Ankara  1.01.2021            0.5            150000           15    45000\n",
+                            "1    London  1.02.2021            0.4            250000           25    85000\n",
+                            "2  New York  1.03.2021            0.3          15000000           30    90000\n",
+                            "3     Paris  1.04.2021            0.2           5400000           10    20000\n",
+                            "4     Tokyo  1.05.2021            0.1          99000000           55    60000\n",
+                            "5    Moscow  1.06.2021            0.0             34000          -20   150000"
                         ],
                         "text/html": [
                             "<div>\n",
@@ -85,33 +85,68 @@
                             "  <thead>\n",
                             "    <tr style=\"text-align: right;\">\n",
                             "      <th></th>\n",
-                            "      <th>Name;Date;Survival Rate;Number of People;Temperature;Bitcoin</th>\n",
+                            "      <th>﻿Name</th>\n",
+                            "      <th>Date</th>\n",
+                            "      <th>Survival Rate</th>\n",
+                            "      <th>Number of People</th>\n",
+                            "      <th>Temperature</th>\n",
+                            "      <th>Bitcoin</th>\n",
                             "    </tr>\n",
                             "  </thead>\n",
                             "  <tbody>\n",
                             "    <tr>\n",
                             "      <th>0</th>\n",
-                            "      <td>Ankara;1.01.2021;0.5;150000;15;45000</td>\n",
+                            "      <td>Ankara</td>\n",
+                            "      <td>1.01.2021</td>\n",
+                            "      <td>0.5</td>\n",
+                            "      <td>150000</td>\n",
+                            "      <td>15</td>\n",
+                            "      <td>45000</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>1</th>\n",
-                            "      <td>London;1.02.2021;0.4;250000;25;85000</td>\n",
+                            "      <td>London</td>\n",
+                            "      <td>1.02.2021</td>\n",
+                            "      <td>0.4</td>\n",
+                            "      <td>250000</td>\n",
+                            "      <td>25</td>\n",
+                            "      <td>85000</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>2</th>\n",
-                            "      <td>New York;1.03.2021;0.3;15000000;30;90000</td>\n",
+                            "      <td>New York</td>\n",
+                            "      <td>1.03.2021</td>\n",
+                            "      <td>0.3</td>\n",
+                            "      <td>15000000</td>\n",
+                            "      <td>30</td>\n",
+                            "      <td>90000</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>3</th>\n",
-                            "      <td>Paris;1.04.2021;0.2;5400000;10;20000</td>\n",
+                            "      <td>Paris</td>\n",
+                            "      <td>1.04.2021</td>\n",
+                            "      <td>0.2</td>\n",
+                            "      <td>5400000</td>\n",
+                            "      <td>10</td>\n",
+                            "      <td>20000</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>4</th>\n",
-                            "      <td>Tokyo;1.05.2021;0.1;99000000;55;60000</td>\n",
+                            "      <td>Tokyo</td>\n",
+                            "      <td>1.05.2021</td>\n",
+                            "      <td>0.1</td>\n",
+                            "      <td>99000000</td>\n",
+                            "      <td>55</td>\n",
+                            "      <td>60000</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>5</th>\n",
-                            "      <td>Moscow;1.06.2021;0.0;34000;-20;150000</td>\n",
+                            "      <td>Moscow</td>\n",
+                            "      <td>1.06.2021</td>\n",
+                            "      <td>0.0</td>\n",
+                            "      <td>34000</td>\n",
+                            "      <td>-20</td>\n",
+                            "      <td>150000</td>\n",
                             "    </tr>\n",
                             "  </tbody>\n",
                             "</table>\n",
@@ -119,7 +154,7 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 49
+                    "execution_count": 5
                 }
             ],
             "metadata": {}
